# daq-databricks-dab

./: .gitignore  PLAN.md  README.md  databricks.yml
.github/workflows/: deploy.yml
ai-agent/databricks-solutions-ai-dev-kit/databricks-mcp-server/: README.md  pyproject.toml  run_server.py  setup.sh
ai-agent/databricks-solutions-ai-dev-kit/databricks-mcp-server/databricks_mcp_server/: __init__.py
ai-agent/databricks-solutions-ai-dev-kit/databricks-mcp-server/databricks_mcp_server/tools/: __init__.py  aibi_dashboards.py  apps.py  jobs.py  pipelines.py  vector_search.py
ai-agent/databricks-solutions-ai-dev-kit/databricks-mcp-server/tests/: test_windows_compat.py
config/environments/: dev.yml  prod.yml  staging.yml
config/gold/: dim_currency.yml  dim_customer.yml  dim_part.yml  dim_promotion.yml  dim_region_nation.yml  dim_sales_reason.yml  dim_salesperson.yml  dim_supplier.yml  dim_territory.yml  fact_order_line.yml  fact_sales.yml  pipeline_quality_kpis.yml
config/sources/: adventureworks.yml  tpch_samples.yml
docs/: AI_DEPLOYMENT_REVIEW_CHECKLIST.md  AI_ONBOARDING_CHATBOT.md
resources/: bronze_dlt_pipeline.yml  gold_dlt_pipeline.yml  monitoring_job.yml  orchestrator_job.yml  silver_dlt_pipeline.yml
scripts/: setup_ai_onboarding_chatbot.sh  smoke_test_ai_onboarding_chatbot.sh  start_ai_onboarding_chatbot.sh
src/bronze/: bronze_dlt.py
src/framework/: __init__.py  config_reader.py  quality_engine.py  schema_drift.py  source_connectors.py  state_manager.py  watermark_manager.py
src/gold/: gold_dlt.py
src/silver/: silver_dlt.py
(+134 files in other folders)
